--- a/templates/listDoctors.jade
+++ b/templates/listDoctors.jade
@@ -5,7 +5,9 @@ block content
 			div.row(style="background-color: "+(i%2==0?"silver":"white"))
 				div.twelve.columns
 					div.row
-						div.eight.columns
+						div.two.columns
+							img(src='design/house.jpg')
+						div.six.columns
 							a(href='view/doctor.html')
 								= item.name
 						div.four.columns
