--- a/contents/css/skeleton.css
+++ b/contents/css/skeleton.css
@@ -114,7 +114,11 @@
 
   .onerow                         { height: 30px; }
   .onecell                        { min-height: 300px; background-color: #F0F0F0; display: inline-block !important;
+
                                   margin: 8px; border: 1px solid #52FF57; border-radius: 10px; }
+    .usercell                        { min-height: 40px; background-color: #F0F0F0; display: inline-block !important;
+    
+                                  margin: 8px; border: 1px solid #52FF57; border-radius: 10px; padding: 5px; }
   .namepiece                      { display: inline-block; width: 50%; padding-top: 10px; padding-left: 10px;}
   .starpiece                      { display: inline-block; float: right; margin-top: -25px; padding-right: 10px; }
   .hourpiece, .addresspiece       { display: block; padding-top: 5px; padding-left: 10px;}
